selfhost/tests/neg/variantarg.ail
// EXPECT: field 1 of variant 'A' expects i64, got str
en E { A(x:i64), B }
e := A("no")
println(0)
